--- a/app/views/admin/events/_panel_one.html.erb
+++ b/app/views/admin/events/_panel_one.html.erb
@@ -72,7 +72,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <a href="#" class="btn btn-primary nextStep">Event details completed</a>
+              <a href="#" class="button is-letsdine-secondary nextStep">Event details completed</a>
             </div>
           </div>
 
