--- a/app/views/admin/events/_panel_three.html.erb
+++ b/app/views/admin/events/_panel_three.html.erb
@@ -81,7 +81,7 @@
         </div>
           <div class="row">
             <div class="col-md-12">
-              <a href="#" class="btn btn-primary nextStep">Restaurant selection completed</a>
+              <a href="#" class="button is-letsdine-secondary nextStep">Restaurant selection completed</a>
             </div>
           </div>
       </div>      
