--- a/app/views/admin/events/_panel_two.html.erb
+++ b/app/views/admin/events/_panel_two.html.erb
@@ -64,6 +64,8 @@
                     <td>04:30</td>
                     <td>05:00</td>
                     <td>05:30</td>
+                  </tr>
+                  <tr>
                     <td>06:00</td>
                     <td>06:30</td>
                     <td>07:00</td>
@@ -82,7 +84,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <a href="#" class="btn btn-primary nextStep">Finished selecting date and time</a>
+                <a href="#" class="button is-letsdine-secondary nextStep">Finished selecting date and time</a>
               </div>
             </div>
           </div>
