--- a/app/views/admin/events/_events.html.erb
+++ b/app/views/admin/events/_events.html.erb
@@ -12,9 +12,50 @@
                     <li><span>People attending:</span> <%= event.total_attendees %></li>
                     <li><span>Expected earning:</span> <%= event.total_attendees * Restaurant.find(event.restaurant_id).price %></li>
                     <li><span>Max seats:</span> <%= event.max_seats %></li>
-                    <li><span>Created by:</span> <%= User.find(event.user_id).name %></li>
+                    <li>
+                        <span>Created by:</span> 
+                        <% if event.user_id.nil? %>
+                            Unknown
+                        <% else %>
+                            <%= User.find(event.user_id).name %>    
+                        <% end %>
+                        
+                    </li>
                 </ul>   
             </li>
         <% end %>
     </ul>
+<% end %>
+
+
+<% @event_list.each do |city,events| %>
+    <% events.each do |event| %>
+        <!-- Modal -->
+        <div id="attendeeModal<%= event.id%>" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="<%= event.event_name%> Attendees" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                          <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                            <h3 id="myModalLabel"><%= event.event_name %> Attendees</h3>
+                          </div>
+                          <div class="modal-body">
+                            <% attendees = Attendee.where("event_id = ?", event.id) %>
+                            <ul>
+                                <% attendees.each do |attedee| %>
+                                    <% user = User.find(attedee.user_id) %>
+                                    <li>
+                                        <%= user.name %> - Phone number: <%= attedee.phone_number %> - Seats: <%= attedee.seats %> - Email: <%= user.email %>
+                                    </li>
+                                <% end %>
+                                
+                            </ul>
+                          </div>
+                          <div class="modal-footer">
+                            <button class="btn btn-large" data-dismiss="modal" aria-hidden="true">Close</button>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+        <!-- End Modal -->
+    <% end %>
 <% end %>
