--- a/app/views/admin/events/_panel_four.html.erb
+++ b/app/views/admin/events/_panel_four.html.erb
@@ -26,7 +26,7 @@
                 -->
               </div>
 
-              <%= f.submit :class => "btn btn-primary" %>
+              <%= f.submit :class => "button is-letsdine-primary" %>
 
             </div>
 
