--- a/app/views/admin/restaurants/new.html.erb
+++ b/app/views/admin/restaurants/new.html.erb
@@ -1,15 +1,14 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>New restaurant</h1>
-		</div>
-	</div>
-			<%= render 'form' %>
+<% content_for :header do %>
+    New Restaurant
+<% end %>
 
-			<%= link_to 'Back', admin_restaurants_path %>
-			
-		
+<div class="row">
+	<div class="col-md-12">
+		<%= render 'form' %>
+		<%# link_to 'Back', admin_restaurants_path %>
+	</div>
 </div>
+			
 
 <script>
 $(document).ready(function(){
