Added cart and payment notification data to the admin section

--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -88,8 +88,14 @@ a {
     color: white; }
 
 /******************************************************************************/
-/* Chart styling */
+/* Payment styling */
 /******************************************************************************/
+.successText {
+  color: #46bfbd; }
+
+.failureText {
+  color: #f7464a; }
+
 /******************************************************************************/
 /* Chart styling */
 /******************************************************************************/
