--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -124,8 +124,16 @@ a
 	}
 }
 /******************************************************************************/
-/* Chart styling */
+/* Payment styling */
 /******************************************************************************/
+.successText
+{
+	color: $contrast_green;
+}
+.failureText
+{
+	color: $contrast_red;	
+}
 /******************************************************************************/
 /* Chart styling */
 /******************************************************************************/
