--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -42,6 +42,7 @@
           <li><a href="/admin" class="dashboard" ng-click="active='dashboard'">Dashboard</a></li>
           <li><a href="/admin/events" class="events" ng-click="active='events'">Events</a></li>
           <li><a href="/admin/restaurants" class="restaurants" ng-click="active='restaurants'">Restaurants</a></li>
+          <li><a href="/admin/payments" class="users" ng-click="active='users'">Payments</a></li>
           <li><a href="/admin/users" class="users" ng-click="active='users'">Users</a></li>
           <li><a href="/admin/history" class="serverStuff" ng-click="active='serverStuff'">History</a></li>
         </ul>
