--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -15,13 +15,10 @@
   <%= javascript_include_tag "bootstrap-markdown" %>
 <% end %>
 
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1 class="newEventHeading">Editing Event</h1>
-		</div>
-	</div>
-</div>
+<% content_for :header do %>
+    Editing Event
+<% end %>
+
 
 <%= render 'form' %>
 
