Changed the application to use the uncompressed version of angularjs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -128,9 +128,10 @@
 
 
 <!-- Angularjs includes start -->
-<%= javascript_include_tag "lib/angularjs/angular.min.js" %>
-<%= javascript_include_tag "lib/angularjs/angular-resource.min.js" %>
-<%= javascript_include_tag "lib/angularjs/angular-route.min.js" %>
+<%= javascript_include_tag "lib/angularjs/angular.js" %>
+<%= javascript_include_tag "lib/angularjs/angular-resource.js" %>
+<%= javascript_include_tag "lib/angularjs/angular-route.js" %>
+<%= javascript_include_tag "lib/angularjs/angular-animate.js" %>
 <%= javascript_include_tag "app/app.js" %>
 <%= javascript_include_tag "app/controllers/HomeController.js" %>
 <%= javascript_include_tag "app/services/users/SessionService" %>
