--- a/app/assets/templates/events/list.html
+++ b/app/assets/templates/events/list.html
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-md-12">
             {{ events }}
+
+            <h1>Results</h1>
+            {{ results }}
         </div>
     </div>
 </div>
