--- a/app/assets/templates/home/home.html
+++ b/app/assets/templates/home/home.html
@@ -1,3 +1,15 @@
+
+<!-- Debug info -- start -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-12" style="background: red;color: white;padding: 10px">
+            logged in: {{ loggedIn }}
+        </div>
+    </div>
+</div>
+<!-- Debug info -- end -->
+
+
 <!-- Slider start -->
 <div class="slider">
     <img ng-repeat="slide in slides" class="slide"
