--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -152,6 +152,7 @@
 <%= javascript_include_tag "app/filters/SplitIntoColsFilter.js" %>
 <%= javascript_include_tag "app/services/events/EventsService.js" %>
 <%= javascript_include_tag "app/controllers/EventsController.js" %>
+<%= javascript_include_tag "app/controllers/RecordCtrl.js" %>
 <!-- Angularjs includes end -->
 
 </body>
