--- a/app/assets/templates/users/login.html
+++ b/app/assets/templates/users/login.html
@@ -8,17 +8,17 @@
             <form name="loginForm" ng-submit="login(user)" class="auth-form" role="form">
                 <h2 class="auth-form-heading">Please sign in</h2><br/>
 
-                <div class="alert alert-danger" ng-show="showMessage(message)">
-                    {{message}}
+                <div class="alert alert-danger" ng-show="login_error.message">
+                    {{login_error.message}}
                 </div>
 
                 <div class="form-group">
                     <label for="Email">Email address</label>
-                    <input type="email" class="form-control" placeholder="Email address" id="Email" ng-model="user.email" required autofocus>
+                    <input type="email" class="form-control" placeholder="Email address" id="Email" ng-model="login_user.email" required autofocus>
                 </div>
                 <div class="form-group">
                     <label for="Password">Password</label>
-                    <input type="password" class="form-control" id="Password" placeholder="Password" ng-model="user.password" required>
+                    <input type="password" class="form-control" id="Password" placeholder="Password" ng-model="login_user.password" required>
                 </div>
 
                 <div class="checkbox">
@@ -28,7 +28,7 @@
                 </div>
                 <button type="submit" class="button is-primary" ng-disabled="loginForm.$invalid">Login</button>
                 <a class="btn btn-link" href="#/users/register">Register</a>
-
+                <button ng-click="logout()" class="btn btn-primary" >Logout</button>
             </form>
         </div>
     </div>
