--- a/app/assets/templates/users/login.html
+++ b/app/assets/templates/users/login.html
@@ -1,6 +1,5 @@
-<h1>{{loginResult}}</h1>
-
 <a ng-click="loggedIn()"> Test</a>
+
 
 
 <div class="container">
@@ -9,17 +8,17 @@
             <form name="loginForm" ng-submit="login(user)" class="auth-form" role="form">
                 <h2 class="auth-form-heading">Please sign in</h2><br/>
 
-                <div class="alert alert-danger" ng-show="login_error.message">
-                    {{login_error.message}}
+                <div class="alert alert-danger" ng-show="authError">
+                    {{authError}}
                 </div>
 
                 <div class="form-group">
                     <label for="Email">Email address</label>
-                    <input type="email" class="form-control" placeholder="Email address" id="Email" ng-model="login_user.email" required autofocus>
+                    <input type="email" class="form-control" placeholder="Email address" id="Email" ng-model="user.email" required autofocus>
                 </div>
                 <div class="form-group">
                     <label for="Password">Password</label>
-                    <input type="password" class="form-control" id="Password" placeholder="Password" ng-model="login_user.password" required>
+                    <input type="password" class="form-control" id="Password" placeholder="Password" ng-model="user.password" required>
                 </div>
 
                 <div class="checkbox">
